Fix word-wrap in code style

--- a/style.css
+++ b/style.css
@@ -262,15 +262,15 @@ padding:1px 0 0;
 }
 
 .slide pre code {
-  display: block;
   background: none;
-  white-space: pre;
-  line-height: 20px;
-  padding: 0;
-  font-size: 15px;
   background-color: #000;
   color: #FFF;
+  display: block;
+  font-size: 15px;
+  line-height: 20px;
   padding: 30px;
+  white-space: pre;
+  word-wrap: break-word;
 }
 
 .slide pre code:before {
